cs-mod/k8s-mod/minio-tenant/mod-ingress.yaml
## MinIO Ingress Definition
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio-tenant
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ca-test-internal
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: 4G
spec:
  rules:
  - host: minio-tenant.cskylab.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 443
  - host: minio-tenant-console.cskylab.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-tenant-console
            port:
              number: 9443
  tls:
  - hosts:
      - minio-tenant.cskylab.net
      - minio-tenant-console.cskylab.net
    secretName: minio-tenant-ingress-tls
